style.css
/* ... */
hr {
	height: 1px;
	border: 0;
	clear: both;
}

/* Text elements */

li > ul,
li > ol {
	margin-bottom: 0;
	margin-left: 2em;
}

ul {
	list-style-type: disc;
    font-size: 17px;
    font-weight: 600;
}

ul ul {
	list-style-type: square;
}

ul ul ul {
	list-style-type: circle;
}

ol {
	list-style-type: decimal;
}

ol ol {
	list-style-type: upper-alpha;
}

ol ol ol {
	list-style-type: lower-roman;
}

ol ol ol ol {
	list-style-type: lower-alpha;
}

dl {
	margin: 0 0 2em 0;
}

dt {
	font-weight: bold;
}

strong {
	font-weight: bold;
}

dfn,
cite,
em,
i {
	font-style: italic;
}

big {
	font-size: 125%;
}

mark,
ins {
	text-decoration: none;
}

abbr,
acronym {
	border-bottom: 1px dotted;
	cursor: help;
}

sup,
sub {
	position: relative;
	vertical-align: baseline;
	font-size: .8em;
	line-height: 0;
}

sup {
	top: -0.5em;
}

sub {
	bottom: -0.25em;
}

textarea,
select,
input[type="text"],
input[type="password"],
input[type="email"],
input[type="color"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="number"],
input[type="range"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
input[type="week"] {
	max-width: 100%;
	padding: .7em 1em;
	border: 3px solid transparent;
	background: transparent;
	font-size: inherit;
	font-weight: bold;
	-webkit-transition: background .3s ease-out;
	transition: background .3s ease-out;
}

input[type="file"] {
	font-size: initial;
}

button,
input[type="button"],
input[type="submit"],
input[type="reset"] {
	padding: 1em 1.5em;
	border: 0;
	font-size: .9em;
	text-transform: uppercase;
	font-weight: bold;
	-webkit-transition: background-color .3s ease-out;
	transition: background-color .3s ease-out;
}

button[disabled],
html input[disabled] {
	cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input:focus,
textarea:focus {
	outline: none;
}

input[type="checkbox"],
input[type="radio"] {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
	-webkit-appearance: none;
}

input[type="search"] {
    -webkit-appearance: textfield;
}

select option {
	padding: .25em .5em;
}

input::-moz-focus-inner { /*Remove button padding in FF*/
	border: 0;
	padding: 0;
}

embed,
iframe,
object {
	max-width: 100%;
}

.fluid-width-video-wrapper {
  max-height: 100vh;
}

a:link,
a:visited {
	text-decoration: none;
}

/* Text meant only for screen readers */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	height: 1px;
	overflow: hidden;
	position: absolute !important;
	width: 1px;
	/*wordwrap used to be here*/
}

/*--------------------------------------------------------------
	# GUTENBERG
--------------------------------------------------------------*/

.entry-content .wp-block-archives,
.entry-content .wp-block-categories,
.entry-content .wp-block-latest-posts {
    padding: 0;
    list-style: none;
	display: none;
}


.wp-block-quote.is-large, .wp-block-quote.is-style-large {
	padding: 1.5em;
}

.aligncenter[class^='wp-block']:not([class^='wp-block-cover']) {
	display: table;
}

.wp-block-separator {
	max-width: 25%;
}
.wp-block-separator.is-style-wide {
	max-width: 100%;
}
.wp-block-separator.is-style-dots::before {
	color: inherit;
}

.wp-block-button .wp-block-button__link {
	border: 3px solid;
	padding: 0.5em 1.5em;
	font-size: .9em;
	font-weight: bold;
	text-transform: uppercase;
	/* background: transparent; */
}

.wp-block-pullquote {
	padding: 1.5em 0;
}

.wp-block-button {
	transition: .2s opacity;
}

.wp-block-button:hover {
	opacity: 0.85;
}

.wp-block-gallery.is-cropped .blocks-gallery-image a,
.wp-block-gallery.is-cropped .blocks-gallery-item a {
	transition: .2s ease-out opacity;
}

.wp-block-gallery.is-cropped .blocks-gallery-image a:hover,
.wp-block-gallery.is-cropped .blocks-gallery-item a:hover {
	opacity: 0.8;
}

/*--------------------------------------------------------------
	# LAYOUT
--------------------------------------------------------------*/

#site-wrapper {
	overflow: hidden;
}

.septera-boxed-layout #site-wrapper {
	margin: 0 auto;
	box-shadow: 0 0 8px rgba(0,0,0,.2);
}

#container {
	display: block;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	float: none;
	width: 100%;
	margin: 0;
	overflow: hidden;
}

#container.two-columns-left #primary,
#container.three-columns-left #primary,
#container.three-columns-left #secondary,
#container.three-columns-sided #primary  	{ -webkit-order: -1; -ms-flex-order: -1; order: -1; }
#container.three-columns-sided .main 		{ -webkit-order: 0; -ms-flex-order: 0; order: 0; }
#container.three-columns-sided #secondary 	{ -webkit-order: 1; -ms-flex-order: 1; order: 1; }

.main {
	clear: both;
	overflow: hidden;
	min-height: 400px;
	margin-bottom: 0;
}

#container:not(.septera-landing-page) .main {
	padding-top: 2em;
	padding-bottom: 2em;
}

/* Left/right padding for content */
#site-header-main-inside,
#access .menu-search-animated .searchform input[type="search"],
#breadcrumbs-container-inside,
#colophon-inside,
#footer-inside,
/* .lp-staticslider .staticslider-caption, */
.seriousslider.seriousslider-theme .seriousslider-caption,
.septera-landing-page .lp-blocks-inside,
.septera-landing-page .lp-boxes-inside,
.septera-landing-page .lp-text-inside,
.septera-landing-page .lp-posts-inside,
.septera-landing-page .lp-page-inside,
.septera-landing-page .lp-section-header,
.septera-landing-page .content-widget {
	padding-left: 2em;
	padding-right: 2em;
}

#container:not(.septera-landing-page) .main {
	padding-left: 2em;
	padding-right: 2em;
}
/* ... */

